<resources>
    <string name="app_name">Cocktail Bar</string>
    <string name="app_title">My Cocktails</string>
    <string name="create_cock_hint">Add your first cocktail here</string>
    <string name="hint_cocktail_name">Title</string>
    <string name="description_hint">Description</string>
    <string name="supporting_title">Add title</string>
    <string name="supporting_description">Optional field</string>
    <string name="recipe_hint">Recipe</string>
    <string name="supporting_recipe">Optional field</string>
    <string name="ingredient_hint">Ingredient</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_button">Delete</string>
    <string name="edit_button">Edit</string>
    <string name="add_chip_button">Add</string>
    <string name="recipe_title_detail">Recipe:</string>
    <string name="message_no_ingredients">There must be at least one ingredient!</string>
    <string name="message_delete_dialog">Are you sure you want to delete this cocktail?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
