<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.AddCocktailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/cocktail_image_detail"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:src="@drawable/cocktail1" />

        <TextView
            android:id="@+id/cocktail_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:padding="8dp"
            android:textSize="24sp"
            tools:text="@string/hint_cocktail_name" />


        <TextView
            android:id="@+id/description_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:maxLines="5"
            android:minLines="2"
            android:padding="8dp"
            android:textSize="16sp"
            tools:text="@string/description_hint" />


        <TextView
            android:id="@+id/recipe_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:maxLines="10"
            android:minLines="2"
            android:padding="8dp"
            android:textSize="16sp"
            tools:text="@string/recipe_hint" />


        <!--
                <EditText
                    android:id="@+id/ingredient1_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rounded_corner_background"
                    android:hint="@string/ingredient_hint"
                    android:inputType="text"
                    android:padding="8dp" />
        -->

        <Button
            android:id="@+id/buttonEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/button_color"
            android:text="@string/edit_button"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/delete_button"
            android:textColor="@color/red"
            android:textSize="20sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="25dp"
            app:strokeColor="@color/red"
            app:strokeWidth="2dp" />

    </LinearLayout>
</ScrollView>
